# Spotify_Downloader

./: .SRCINFO  .env.example  .github-workflows-release.yml.example  .gitignore  AUR_PUBLISHING_JOURNEY.md  AUR_SUBMISSION.md  CHANGELOG.md  FLAC_SETUP_GUIDE.md  PKGBUILD  QUICKSTART.md  README.md  VERSIONING.md  VERSIONING_SUMMARY.md  bump_version.py  main.py  pyproject.toml  requirements-deezer.txt  requirements.txt  setup.py  setup.sh
src/: __init__.py  __version__.py  converter.py  deemix_client.py  deezer_client.py  downloader.py  metadata.py  multi_source_downloader.py  progress_display.py  spotify_client.py  utils.py  youtube_search.py
